# trojai-example

./: .gitignore  .gitmodules  1_batch_run.py  Dockerfile  NC_pytorch.py  README.md  SCAn.py  abs.py  add_trigger.py  adj_param.pkl  archs.py  batch_run.py  build_singularity.sh  clean_config.py  clean_envs.py  conda_environment.yml  config.json  conll2003_data.json  datagen_requirements.txt  demo_images.py  demo_results.py  detector.def  detector.py  dqn_record.pkl  entrypoint.py  environment.yml  example_container.def  example_data.json  example_metrics.py  example_trojai_llm_mitigation.py  example_trojai_mitigation.def  example_trojai_mitigation.py  example_trojan_detector.def  example_trojan_detector.py  fake_trojan_detector.def  fake_trojan_detector.py  finetuning.py  game_env.py  gen_syn_data.py  gen_trigger_polygon.py  (+46 more)
0000075/: ground_truth.json  model.pt  model.test.stats.json
learned_parameters/: README.md  dict.json  metaparameters.json  numpy_array.npy
model/: README.md  clean-example-logits.csv  config.json  detailed_stats.csv  model_detailed_stats.csv  model_stats.json  ner_detailed_stats.json  ner_stats.json  readme.txt  stats.json
parameter_data/: README.md
randomize/: LICENSE.txt  README.md  rewrite.py
scratch/: README.md
test-model/: config.json
tokenizers/: MobileBERT-google-mobilebert-uncased.pt  csarron-mobilebert-uncased-squad-v2.pt  google-electra-small-discriminator.pt
trojai-llm-mitigation-framework/: setup.py
trojai-mitigation-round-framework/: README.md  setup.py
utils/: LowMemConv.py  MalConv.py  abstract.py  arrays.py  (+12 more)
(+354 files in other folders)
